add vanderplas bio

--- a/proposal.bib
+++ b/proposal.bib
@@ -1,4 +1,58 @@
 
+@article{scikit-learn1,
+ title={Scikit-learn: Machine Learning in {P}ython},
+ author={Pedregosa, F. and Varoquaux, G. and Gramfort, A. and Michel, V.
+         and Thirion, B. and Grisel, O. and Blondel, M. and Prettenhofer, P.
+         and Weiss, R. and Dubourg, V. and Vanderplas, J. and Passos, A. and
+         Cournapeau, D. and Brucher, M. and Perrot, M. and Duchesnay, E.},
+ journal={Journal of Machine Learning Research},
+ volume={12},
+ pages={2825--2830},
+ year={2011}
+}
+
+@inproceedings{scikit-learn2,
+    hal_id = {hal-00856511},
+    url = {http://hal.inria.fr/hal-00856511},
+    title = {{API design for machine learning software: experiences from the scikit-learn project}},
+    author = {Buitinck, Lars and Louppe, Gilles and Blondel, Mathieu and Pedregosa, Fabian and Mueller, Andreas and Grisel, Olivier and Niculae, Vlad and Prettenhofer, Peter and Gramfort, Alexandre and Grobler, Jaques and Layton, Robert and Vanderplas, Jake and Joly, Arnaud and Holt, Brian and Varoquaux, Ga{\"e}l},
+    abstract = {{Scikit-learn is an increasingly popular machine learning li- brary. Written in Python, it is designed to be simple and efficient, accessible to non-experts, and reusable in various contexts. In this paper, we present and discuss our design choices for the application programming interface (API) of the project. In particular, we describe the simple and elegant interface shared by all learning and processing units in the library and then discuss its advantages in terms of composition and reusability. The paper also comments on implementation details specific to the Python ecosystem and analyzes obstacles faced by users and developers of the library.}},
+    keywords = {Machine learning, language design, software engineering, Python},
+    language = {English},
+    affiliation = {Information and Language Processing Systems - ILPS , Systems and Modeling Research Unit , Kobe University , PARIETAL - INRIA Saclay - Ile de France , Autonomous Intelligent Systems Group , Chercheur Ind{\'e}pendant , Computational Linguistics , Ciuvo GMBH , Laboratoire Traitement et Communication de l'Information [Paris] - LTCI , Science Information Technology and Engineering , University of Washington , Samsung Electronics Research Institute},
+    booktitle = {{European Conference on Machine Learning and Principles and Practices of Knowledge Discovery in Databases}},
+    address = {Prague, Czech Republic},
+    audience = {international },
+    year = {2013},
+    month = Jul,
+    pdf = {http://hal.inria.fr/hal-00856511/PDF/paper.pdf},
+}
+
+
+@ARTICLE{Daniel2011,
+   author = {{Daniel}, S.~F. and {Connolly}, A. and {Schneider}, J. and {Vanderplas}, J. and 
+	{Xiong}, L.},
+    title = "{Classification of Stellar Spectra with Local Linear Embedding}",
+  journal = {\aj},
+ keywords = {methods: data analysis, stars: general, techniques: spectroscopic},
+     year = 2011,
+    month = dec,
+   volume = 142,
+      eid = {203},
+    pages = {203},
+      doi = {10.1088/0004-6256/142/6/203},
+   adsurl = {http://adsabs.harvard.edu/abs/2011AJ....142..203D},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@inproceedings{Xiong2011,
+    Month = {April},
+    Year = {2011},
+    Booktitle = {AISTATS 2011},
+    Author = { Liang Xiong, Barnabas Poczos, Jeff Schneider, Andrew Connolly, Jake VanderPlas },
+    Title = {Hierarchical Probabilistic Models for Group Anomaly Detection}
+}
+
 
 @MISC{Doe:2009:Misc,
 author = {Doe, George},
