--- a/organization.tex
+++ b/organization.tex
@@ -44,7 +44,7 @@ emulate the UW program.
 \subsection{             Results from Prior NSF Support             }
 \label{sec:priorNSF}
 
-\meila, Connolly, Ivezi\'{c} , and van der Plas are all part of an active
+\meila, Connolly, Ivezi\'{c} , and Vanderplas are all part of an active
 and ongoing collaboration between statisticians, astrophysicists, and
 computer scientists at the University of Washington and Carnegie
 Mellon University.  This collaboration, dating to 2001, has
@@ -136,6 +136,36 @@ three-year project has produced four journal publications, a
 Ph.D. thesis, and has engaged four undergraduates in data analysis and
 publications.
 
+Vanderplas is currently an NSF post-doctoral fellow, through the NSF
+Transformative Computational Science using Cyberinfrastructure (CI TRaCS)
+program (``Weak Gravitational Lensing in the Petabyte Era'', award
+CI-TraCS-1226371).
+Though Vanderplas' PhD is in Astronomy, the fellowship is in the Computer
+Science and Engineering department's Database Research Group, and is focused
+on pushing the boundaries of data-intensive cosmological science through
+fundamental work on new database technologies. The cross-disciplinary nature
+of this work extends that of Vanderplas' past research, which includes several
+projects with collaborators from computer science and related fields
+\cite{Daniel2011, Xiong2011, scikit-learn1, scikit-learn2}.
+
+Vanderplas has spent a significant amount of time on the development of
+open source scientific computing software, primarily in the Python
+language.  Among other contributions,
+he is a maintainer of the well-known compendium of scientific tools in
+{\it SciPy}\footnote{\url{http://scipy.org}}, a core contributer to the
+popular machine learning toolkit
+{\it Scikit-learn}\footnote{\url{http://scikit-learn.org}},
+and the primary author of several specialized Python packages,
+including the {\it AstroML} package which is an integral piece of the
+curriculum for the current proposal.
+As a result of his role in the scientific Python community, Vanderplas
+has presented dozens of talks, tutorials, and seminars related to scientific
+computing in Python, primarily at the
+PyCon\footnote{\url{https://us.pycon.org/}},
+SciPy\footnote{\url{http://conference.scipy.org/}},
+and PyData\footnote{\url{http://pydata.org/}} conference series.
+This expertise contributes to the practical side of the above-mentioned
+Astronomy textbook Vanderplas authored with Co-PIs Ivezic and Connolly.
 
 Beyond the statistical and astrophysical aspects of the research
 described above the PIs have demonstrated a commitment for integrating
@@ -144,9 +174,9 @@ learning tools available at http://astroml.github.com and the XXX). In
 the field of informal education, Connolly was the technical lead for
 the development of Sky in Google Earth (Google Sky;
 http://earth.google.com) which enabled the seamless exploration of
-astronomical images of the sky, and recently developed an affordable
-digital planetarium system using Microsoft's World Wide Telescope
-software \cite{rosenfield2011}.
+astronomical images of the sky, and recently with Vanderplas worked to
+develop and deploy an affordable digital planetarium system using Microsoft's
+World Wide Telescope software \cite{rosenfield2011}.
 
 All tools, codes and educational material developed through this
 program will be open-source and made available on the web. 
