--- a/organization.tex
+++ b/organization.tex
@@ -146,7 +146,7 @@ on pushing the boundaries of data-intensive cosmological science through
 fundamental work on new database technologies. The cross-disciplinary nature
 of this work extends that of Vanderplas' past research, which includes several
 projects with collaborators from computer science and related fields
-\cite{Daniel2011, Xiong2011, scikit-learn1, scikit-learn2}.
+\cite{daniel2011, Xiong2011, scikit-learn1, scikit-learn2}.
 
 Vanderplas has spent a significant amount of time on the development of
 open source scientific computing software, primarily in the Python
