fix formatting in bib

--- a/proposal.bib
+++ b/proposal.bib
@@ -34,7 +34,7 @@
     Month = {April},
     Year = {2011},
     Booktitle = {AISTATS 2011},
-    Author = {Liang Xiong, Barnabas Poczos, Jeff Schneider, Andrew Connolly, Jake VanderPlas },
+    Author = {Liang Xiong and Barnabas Poczos and Jeff Schneider and Andrew Connolly and Jake VanderPlas},
     Title = {Hierarchical Probabilistic Models for Group Anomaly Detection}
 }
 
